--- a/sass/components/_section_hero.scss
+++ b/sass/components/_section_hero.scss
@@ -1,7 +1,7 @@
 .hero{
     text-align: center;
     background-color: #2F303A;
-    background-image: linear-gradient(to top, #2F303A66 100%, #2F303A66 100% ), url(/images/hero-img.jpg);
+    background-image: linear-gradient(to top, #2F303A66 100%, #2F303A66 100% ), url(./images/hero-img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
