--- a/css/main.css
+++ b/css/main.css
@@ -409,8 +409,8 @@ img {
 .hero {
   text-align: center;
   background-color: #2F303A;
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(100%, rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/images/hero-img.jpg);
-  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4) 100%, rgba(47, 48, 58, 0.4) 100%), url(/images/hero-img.jpg);
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(100%, rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./images/hero-img.jpg);
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4) 100%, rgba(47, 48, 58, 0.4) 100%), url(./images/hero-img.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -1027,7 +1027,7 @@ img {
 }
 
 .checkbox__input:checked + .checkbox__icon {
-  background-image: url(/images/icon-check.svg);
+  background-image: url(./images/icon-check.svg);
   background-size: contain;
   background-color: #2196F3;
   border-color: #2196F3;
