--- a/sass/components/_beack-drop.scss
+++ b/sass/components/_beack-drop.scss
@@ -134,7 +134,7 @@
     cursor: pointer;
 }
 .checkbox__input:checked + .checkbox__icon{
-    background-image: url(./images/icon-check.svg);
+    background-image: url(../images/icon-check.svg);
     background-size: contain;
     background-color: $color-hover;
     border-color: $color-hover;
