--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,18 @@
 @import './utils/nomalize';
+@import './base/reset';
 @import './utils/variables';
-@import './components/page_header';
+@import './utils/container';
+@import './layout/page_header';
 @import './components/logo';
 @import './components/nav';
-@import './components/section_hero';
-@import './components/section_features';
-@import './components/section_work';
-@import './components/section_team';
+@import './layout/section_hero';
+@import './layout/section_features';
+@import './layout/section_work';
+@import './layout/section_team';
 @import './components/socials_icons';
-@import './components/section_client';
-@import './components/footer';
+@import './layout/section_client';
+@import './layout/footer';
 @import './components/subscription';
 @import './components/beack-drop';
 @import './components/portfolio_filtres';
-@import './components/portfolio';
+@import './layout/portfolio';
