hw-7 ( 1) -padding in features. 2) color in contact 3) folder "_comand" )

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -48,7 +48,7 @@
 }
 .contact__link{
     
-    color: var(--paragraph-color);
+    color: $color-paragraph;
     font-weight: 500;
     line-height: calc(16 / 14);
     letter-spacing: 0.03em;
